--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
 
   <!-- VOLUME 1 -->
   <a href="vol1.html" class="item">
-    <img src="pages/booklet-page-001.jpg" class="cover" alt="PaleZine Vol. 1 Cover">
+    <img src="pages/booklet-page-001.jpg" class="cover" alt="PaleZine Vol. I">
     <h2>Volume 1</h2>
   </a>
 
   <!-- VOLUME 2 -->
   <a href="vol2.html" class="item">
-    <img src="pages2/booklet2-page-1-1.jpg" class="cover" alt="PaleZine Vol. 2 Cover">
+    <img src="pages2/booklet2-page-1-1.jpg" class="cover" alt="PaleZine Vol. II">
     <h2>Volume 2</h2>
   </a>
 
@@ -75,4 +75,5 @@
 
 </body>
 </html>
+
 
