--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>PaleZine – Volumes</title>
+<title>PaleZine</title>
 
 <style>
   body {
@@ -75,5 +75,6 @@
 
 </body>
 </html>
+
 
 
