--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
   <!-- VOLUME 2 -->
   <a href="vol2.html" class="item">
-    <img src="pages2/booklet2-page-1-1.jpg" class="cover" alt="PaleZine Vol. II">
+    <img src="pages2/booklet2-1-1.jpg" class="cover" alt="PaleZine Vol. II">
     <h2>Volume 2</h2>
   </a>
 
@@ -75,6 +75,7 @@
 
 </body>
 </html>
+
 
 
 
