--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 
 </div>
 
-<footer>Choose a volume to begin reading.</footer>
+<footer>A poetry Zine of Rumman, thanks to the help of many people.</footer>
 
 </body>
 </html>
+
 
 
 
