--- a/vol2.html
+++ b/vol2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine – Volume 2</title>
+<title>PaleZine - Volume 2</title>
 
 <style>
   * { box-sizing: border-box; }
@@ -72,7 +72,7 @@
 <body>
 
 <header>
-  <span class="title">PaleZine — Volume 2</span>
+  <span class="title">PaleZine - Volume 2</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
   <a class="btn" href="booklet2.pdf" download>Download PDF</a>
   <a class="btn" href="index.html">Back to Volumes</a>
@@ -184,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
