--- a/vol1.html
+++ b/vol1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine – Volume 1</title>
+<title>PaleZine - Volume 1</title>
 
 <style>
   * { box-sizing: border-box; }
@@ -67,7 +67,7 @@
 <body>
 
 <header>
-  <span class="title">PaleZine — Volume 1</span>
+  <span class="title">PaleZine - Volume 1</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
   <a class="btn secondary" href="booklet.pdf" download>Download PDF</a>
   <a id="openPDF" class="btn secondary" href="booklet.pdf" target="_blank" rel="noopener">Open PDF</a>
@@ -80,7 +80,7 @@
 </div>
 
 <footer>
-  Tip: On mobile, scroll mode is easier. Switch to flip mode anytime.
+  Tip: On mobile, scroll mode is easier ^^ . Switch to flip mode anytime.
 </footer>
 
 <script>
@@ -204,3 +204,4 @@
 
 </body>
 </html>
+
