add wait please message vol1.html

--- a/vol1.html
+++ b/vol1.html
@@ -80,6 +80,8 @@
 </div>
 
 <footer>
+                         If all is black wait for loading 😉...
+
   Tip: On mobile, scroll mode is easier ^^ . Switch to flip mode anytime.
 </footer>
 
@@ -204,4 +206,5 @@
 
 </body>
 </html>
+
 
