--- a/vol2.html
+++ b/vol2.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PaleZine - Volume 2</title>
+<title>PaleZine – Volume 2</title>
 
 <style>
   * { box-sizing: border-box; }
   body {
     margin: 0;
     background: radial-gradient(circle at 20% 20%, #2a2a2a 0%, #000 80%);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", Roboto, "Helvetica Neue", sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Inter", Roboto, sans-serif;
     color: #fff;
     min-height: 100vh;
     display: flex; flex-direction: column; align-items: center;
@@ -58,7 +58,14 @@
     box-shadow: 0 20px 60px rgba(0,0,0,0.6);
   }
 
-  footer { color: #aaa; font-size: .8rem; padding: 1rem; text-align: center; opacity: .8; }
+  footer {
+    color: #aaa;
+    font-size: .8rem;
+    padding: 1rem;
+    text-align: center;
+    opacity: .8;
+    max-width: 900px;
+  }
 
   @media (max-width: 950px) {
     #flipbook { width: 100%; height: calc(100vw * (600/900)); }
@@ -72,7 +79,7 @@
 <body>
 
 <header>
-  <span class="title">PaleZine - Volume 2</span>
+  <span class="title">PaleZine — Volume 2</span>
   <button id="toggleMode" class="btn">Switch to Flip</button>
   <a class="btn" href="booklet2.pdf" download>Download PDF</a>
   <a class="btn" href="index.html">Back to Volumes</a>
@@ -83,66 +90,73 @@
   <div id="scrollReader"></div>
 </div>
 
-<footer>Volume 2</footer>
+<footer>
+  If all is black wait for loading 😉...<br><br>
+  Tip: On mobile, scroll mode is easier ^^ . Switch to flip mode anytime.
+</footer>
 
 <script>
-  // 👇👇👇 THIS IS THE KEY FIX 👇👇👇
-  // Matches filenames like: booklet2-1-1.jpg, booklet2-2-1.jpg, ...
+  // --- CORRECT FILENAME PATTERN FOR YOUR IMAGES ---
+  // Matches: booklet2-1-1.jpg, booklet2-2-1.jpg, ..., booklet2-16-1.jpg
   const FOLDER = "pages2/";
   const PREFIX = "booklet2-";
   const SUFFIX = "-1.jpg";
   const START_INDEX = 1;
-  const MAX_PAGES_TO_TRY = 200;
+  const MAX_PAGES_TO_TRY = 300; // safe cap
 
   let pageURLs = [];
   let mode = null;
 
-  function isSmallScreen() {
-    return window.matchMedia('(max-width: 950px)').matches;
-  }
+  const isSmallScreen = () => window.matchMedia('(max-width: 950px)').matches;
 
-  function imgExists(url) {
-    return new Promise((resolve) => {
+  function imgExists(url){
+    return new Promise(resolve => {
       const img = new Image();
       img.onload = () => resolve(true);
       img.onerror = () => resolve(false);
-      img.src = url;
+      img.src = url + "?v=" + Date.now();
     });
   }
 
-  async function discoverPages() {
+  // Find all existing pages
+  async function discoverPages(){
     const urls = [];
-    for (let i = START_INDEX; i < START_INDEX + MAX_PAGES_TO_TRY; i++) {
+    for(let i = START_INDEX; i < START_INDEX + MAX_PAGES_TO_TRY; i++){
       const url = `${FOLDER}${PREFIX}${i}${SUFFIX}`;
-      const ok = await imgExists(url);
-      if (!ok) break;
+      const exists = await imgExists(url);
+      if(!exists) break;
       urls.push(url);
     }
     return urls;
   }
 
-  function mountScrollReader() {
+  // -------- Scroll mode --------
+  function mountScrollReader(){
     const container = document.getElementById('scrollReader');
     container.innerHTML = '';
-    pageURLs.forEach((src, idx) => {
+
+    pageURLs.forEach((src, idx)=>{
       const img = document.createElement('img');
       img.className = 'page-img';
       img.src = src;
-      img.alt = `Page ${idx + 1}`;
+      img.alt = `Page ${idx+1}`;
       container.appendChild(img);
     });
+
     container.style.display = 'block';
     document.getElementById('flipbook').style.display = 'none';
-    document.getElementById('toggleMode').textContent = 'Switch to Flip';
+
     mode = 'scroll';
+    document.getElementById('toggleMode').textContent = 'Switch to Flip';
   }
 
-  function mountFlipbook() {
+  // -------- Flip mode --------
+  function mountFlipbook(){
     const flip = document.getElementById('flipbook');
     flip.innerHTML = '';
     document.getElementById('scrollReader').style.display = 'none';
 
-    pageURLs.forEach((src) => {
+    pageURLs.forEach(src=>{
       const div = document.createElement('div');
       div.className = 'page';
       div.style.backgroundImage = `url('${src}')`;
@@ -153,37 +167,40 @@
 
     $("#flipbook").turn({
       width: isSmallScreen() ? window.innerWidth : 900,
-      height: isSmallScreen() ? window.innerWidth * (600 / 900) : 600,
-      display: isSmallScreen() ? "single" : "double",
+      height: isSmallScreen() ? window.innerWidth * (600/900) : 600,
+      display: isSmallScreen() ? 'single' : 'double',
       autoCenter: true
     });
 
-    document.getElementById('toggleMode').textContent = 'Switch to Scroll';
     mode = 'flip';
+    document.getElementById('toggleMode').textContent = 'Switch to Scroll';
   }
 
-  function toggleMode() {
-    if (mode === 'flip') mountScrollReader();
+  function toggleMode(){
+    if(mode === 'flip') mountScrollReader();
     else mountFlipbook();
   }
 
-  (async function init() {
+  // -------- Initialization --------
+  (async function init(){
     pageURLs = await discoverPages();
 
-    if (pageURLs.length === 0) {
-      alert("No pages found in pages2/. Check filenames.");
+    if(pageURLs.length === 0){
+      alert("No images found for Volume 2. Check filenames in pages2/.");
       return;
     }
 
-    if (isSmallScreen()) mountScrollReader();
+    if(isSmallScreen()) mountScrollReader();
     else mountFlipbook();
 
-    document.getElementById("toggleMode").addEventListener("click", toggleMode);
+    document.getElementById('toggleMode').addEventListener('click', toggleMode);
   })();
 </script>
 
 </body>
 </html>
+
+
 
 
 
