embd to img  index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <!-- Volume 2 -->
   <a href="vol2.html" class="item">
-    <embed src="booklet2-1-1.jpg" class="cover" alt="PaleZine Vol 2">
+    <img src="booklet2-1-1.jpg" class="cover" alt="PaleZine Vol 2">
     <h2>Volume 2</h2>
   </a>
 
@@ -68,8 +68,9 @@
 
 <footer>
   A poetry Zine of Rumman, thanks to the help of many people.<br>
-  To come to the next poetry evening, follow us on Instagram:<br>
-  <a href="https://www.instagram.com/rumman_dd/" target="_blank">@rumman_dd</a> 😉
+  
+  To come to the next poetry evening stay updated here :<br> <a href="https://www.instagram.com/rumman_dd/" target="_blank">@rumman_dd</a> 😉
+
 </footer>
 
 </body>
@@ -96,6 +97,7 @@
 
 
   
+
 
 
 
