:beers: index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <!-- Volume 2 -->
   <a href="vol2.html" class="item">
-    <img src="booklet2-1-1.jpg" class="cover" alt="PaleZine Vol 2">
+    <img src="pages2/booklet2-1-1.jpg" class="cover" alt="PaleZine Vol 2">
     <h2>Volume 2</h2>
   </a>
 
@@ -97,6 +97,7 @@
 
 
   
+
 
 
 
